# frida-mcp

./: .gitignore  README.md  pyproject.toml
agent/: agent.js  package-lock.json  package.json
src/frida_mcp/: __init__.py  adb.py  agent.py  android.py  device.py  files.py  hooks.py  memory.py  server.py  session.py  tools.py
tests/: conftest.py  test_agent.py  test_dispatcher.py  test_helpers.py  test_session.py  test_tools.py
